--- a/compose.yaml
+++ b/compose.yaml
@@ -8,4 +8,6 @@ services:
     container_name: MyTodoListDev
     volumes:
       - .:/app
+    environment:
+      - DOTNET_WATCH_RESTART_ON_RUDE_EDIT=1
     command: dotnet watch
