--- a/compose.yaml
+++ b/compose.yaml
@@ -1,4 +1,25 @@
-services: 
+services:
+  todo-db:
+    container_name: todo-db
+    image: postgres:latest
+    environment:
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PW}
+      - POSTGRES_DB=${POSTGRES_DB} #optional (specify default database instead of $POSTGRES_DB)
+    ports:
+      - "5432:5432"
+    restart: always
+  pgadmin:
+    container_name: pgadmin
+    image: dpage/pgadmin4:latest
+    environment:
+      - PGADMIN_DEFAULT_EMAIL=${PGADMIN_MAIL}
+      - PGADMIN_DEFAULT_PASSWORD=${PGADMIN_PW}
+    ports:
+      - "5050:80"
+    restart: always
+    depends_on:
+      - todo-db
   my-todo-list-api:
     build:
       context: .
@@ -11,3 +32,5 @@ services:
     environment:
       - DOTNET_WATCH_RESTART_ON_RUDE_EDIT=1
     command: dotnet watch
+    depends_on:
+      - todo-db
