--- a/.github/workflows/docker-ecr-publish.yml
+++ b/.github/workflows/docker-ecr-publish.yml
@@ -31,8 +31,8 @@ jobs:
 
     - name: Build, tag, and push image to Amazon ECR
       env:
-        ECR_REGISTRY: 484457132668.dkr.ecr.us-east-1.amazonaws.com/my-todo-cs
-        ECR_REPOSITORY: my-todo-cs
+        ECR_REGISTRY: ${{ secrets.AWS_REPO_URI }}
+        ECR_REPOSITORY: ${{ secrets.AWS_ECR_REPO }}
         IMAGE_TAG: latest
       run: |
         docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
